--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "babel-polyfill": "^6.23.0",
     "bootstrap": "^3.3.7",
     "es6-promise": "^4.1.0",
+    "eslint-config-airbnb": "^14.1.0",
     "express": "^4.15.2",
+    "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
@@ -19,7 +21,7 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.2",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.3.3",
     "babel-preset-es2015": "^6.24.1",
