--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "author": "Csaba Lakatos",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --progress --colors",
-    "watch": "webpack-dev-server --inline --hot --progress --colors"
+    "build": "./node_modules/.bin/webpack --config webpack.config.js --progress --colors",
+    "watch": "./node_modules/.bin/webpack-dev-server --content-base dist/ --inline --hot --progress --colors"
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
@@ -16,17 +16,17 @@
     "es6-promise": "^4.1.0",
     "eslint-config-airbnb": "^14.1.0",
     "express": "^4.15.2",
-    "prop-types": "^15.5.8",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-redux": "^5.0.4",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.0",
     "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^6.4.1",
+    "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.3.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -36,10 +36,10 @@
     "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3",
-    "html-webpack-plugin": "^2.28.0",
+    "eslint-plugin-react": "^7.1.0",
+    "html-webpack-plugin": "^2.29.0",
     "style-loader": "^0.16.1",
-    "webpack": "^2.3.3",
+    "webpack": "^3.0.0",
     "webpack-dev-server": "^2.4.2"
   }
 }
