--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "build": "./node_modules/.bin/webpack --config webpack.config.js --progress --colors",
-    "watch": "./node_modules/.bin/webpack-dev-server --content-base dist/ --inline --hot --progress --colors"
+    "watch": "./node_modules/.bin/webpack-dev-server --inline --hot --progress --colors"
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
@@ -20,7 +20,11 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.0",
-    "redux": "^3.6.0"
+    "react-router": "4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "4.0.8",
+    "redux": "^3.6.0",
+    "redux-thunk": "2.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -38,8 +42,12 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^7.1.0",
     "html-webpack-plugin": "^2.29.0",
+    "npm-run-all": "^4.1.1",
+    "redux-immutable-state-invariant": "2.0.0",
     "style-loader": "^0.16.1",
     "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.4.2"
+    "webpack-dev-server": "^2.4.2",
+    "webpack-dev-middleware": "1.12.0",
+    "webpack-hot-middleware": "2.18.2"
   }
 }
