--- a/.eslintrc
+++ b/.eslintrc
@@ -26,6 +26,7 @@ rules:
   func-names: 0
   indent: 2
   linebreak-style: ["error", "windows"]
+  max-len: 0
   new-cap: 0
   no-bitwise: ["error", { "allow": ["&", "<<"] }]
   no-plusplus: 0
