--- a/.eslintrc
+++ b/.eslintrc
@@ -38,13 +38,7 @@ rules:
   no-use-before-define: ["error", { "functions": false, "classes": true }]
   quote-props: 0
   template-curly-spacing: [2, "always"]
-  comma-dangle: ["error", {
-    "arrays": "always-multiline",
-    "objects": "always-multiline",
-    "imports": "always-multiline",
-    "exports": "always-multiline",
-    "functions": "never"
-  }]
+  comma-dangle: 0
   jsx-quotes: [2, "prefer-single"]
   react/forbid-prop-types: 0
   react/jsx-curly-spacing: [2, "always"]
